NMS-16216: Update docs for deprecated Newts commands

--- a/docs/modules/operation/pages/deep-dive/performance-data-collection/shell/measurements.adoc
+++ b/docs/modules/operation/pages/deep-dive/performance-data-collection/shell/measurements.adoc
@@ -1,4 +1,4 @@
-
+// This file is included in deployment:time-series-storage/newts/resourcecli.adoc.  Any change to this file name will need to be updated in that file as well.
 [[ga-performance-mgmt-measurements-shell]]
 = Measurements & Resources
 :description: Karaf Shell command in {page-component-title} that help enumerate, view, and manage measurement-related resources.
