--- a/docs/modules/deployment/nav.adoc
+++ b/docs/modules/deployment/nav.adoc
@@ -22,7 +22,7 @@
 *** xref:time-series-storage/newts/cassandra-jmx.adoc[]
 *** xref:time-series-storage/newts/cassandra-newts-jmx.adoc[]
 *** xref:time-series-storage/newts/newts-repository-converter.adoc[]
-*** xref:time-series-storage/newts/resourcecli.adoc[]
+*** xref:time-series-storage/newts/resourcecli.adoc[Newts Karaf Commands]
 
 ** xref:time-series-storage/timeseries/ts-integration-layer.adoc[]
 *** xref:time-series-storage/timeseries/configuration.adoc[]
