Docs: Include ES alarm history under alarms

--- a/docs/modules/operation/pages/deep-dive/alarms/history.adoc
+++ b/docs/modules/operation/pages/deep-dive/alarms/history.adoc
@@ -1,9 +1,1 @@
-
-[[ga-alarm-history]]
-= Alarm History
-:description: Get an overview of how {page-component-title} uses Elasticsearch to persist historical alarm data.
-
-Alarms are deleted from the {page-component-title} database as they clear or become stale.
-If you would like to keep an historical record of alarm data, you can enable the alarm history feature to provide long-term storage and maintain a history of alarm state changes in Elasticsearch.
-
-For more information, see xref:deep-dive/elasticsearch/features/alarm-history.adoc#ga-alarm-history[Alarm History].
+include::operation:deep-dive/elasticsearch/features/alarm-history.adoc[]
