--- a/docs/modules/operation/pages/deep-dive/structured-node-list/introduction.adoc
+++ b/docs/modules/operation/pages/deep-dive/structured-node-list/introduction.adoc
@@ -1,167 +1,135 @@
 
 [[structured-node-list]]
 = Structured Node List
-:description: Provides details about the Structured Node List of {page-component-title}.
+:description: Learn about the structured node list in OpenNMS Horizon/Meridian, which lets users perform enhanced data display, search, filter, and export node information.
 
-The {page-component-title} 33 Web UI includes a new feature, the Structured Node List.
-This is a Vue-based page which displays node information and enables the user to perform enhanced data display, searching, filtering, and data export.
-
-Navigate to this page from the main menu `Info > Structured Node List`.
+The Horizon 33 Web UI includes a new feature, the Structured Node List.
+The structured node list is a Vue-based page that displays node information and lets the user perform enhanced data display, search, filter, and export data.
 
 The main display shows a paginated table of nodes corresponding to the current search and filtering parameters.
-Most of the columns can be sorted in ascending or descending order.
+You can sort most of the columns in ascending or descending order.
 
-You can choose between 10, 20 or 50 entries per page, and can navigate between pages, or go to the start or end of the currently filtered set.
+You can choose among 10, 20 or 50 entries per page, navigate between pages, or go to the start or end of the currently filtered set.
 
 .Structured Node List
-image::structured-node-list/node-structure-overview.png["{page-component-title} web UI showing structured node list"]
+image::structured-node-list/node-structure-overview.png["{page-component-title} web UI showing structured node list."]
 
-The first column of each node has an Action menu where the user can:
+The first column of each node has an Action menu where the user can do the following:
 
-- choose various actions, including "Info..." to open a dialog window displaying details about the node
-- navigate to various relevant pages (Alarms, Events, etc.)
-- perform other actions (Rescan, Schedule an Outage, etc.)
+* Choose various actions, including **Info...** to open a dialog that displays details about the node.
+* Navigate to various relevant pages (Alarms, Events, and so on).
+* Perform other actions (rescan, schedule an outage, and so on).
 
-Above the table is a button that allows you to export the current data in either CSV or JSON format.
+The **Export** symbol image:structured-node-list/node-export-button.png[width=32] lets you export the current data in either CSV or JSON format.
 
-A gear icon opens the Node Preferences window which allows you to configure which columns are displayed and in which order.
-Saving this configuration will also save the current search and filtering options.
+A gear icon image:structured-node-list/node-preferences-button.png[width=32] opens the Node Preferences window that allows you to configure the columns displayed and their order.
+Saving this configuration also saves the current search and filtering options.
 
-An input field above the table allows you to search by node label.
+An input field above the table lets you search by node label.
 
-On the left is the Filtering and Extended Search panel which allows you to filter and search by various parameters.
+The Filtering and Extended Search panel on the left lets you filter and search by various parameters.
 
-== Node Table
+== Node table
 
-The table displays various columns of information about the nodes that match the current search and filter parameters.
+The table displays columns of information about the nodes that match the current search and filter parameters.
 
 The Node Label and ID fields contain links to navigate to the Node Details page.
 
 The IP Address field contains a link to go to the IP Interface page for that interface.
-A tooltip will also display more information about the interface, for example if it is Managed, Primary, Not Eligible, etc.
+A tooltip will also display more information about the interface; for example, if it is managed, primary, not eligible, and so on.
 
-The Flows field contains arrows denoting whether Ingress and/or Egress flow information is available, and a tooltip provides more detail.
+The Flows field contains arrows denoting whether Ingress and/or Egress flow information is available, with a tooltip to provide more detail.
 
-== Action Menu
+== Action menu
 
-The Action Menu next to each node contains the following:
+The Action menu next to each node provides options to display the Node Details dialog and navigate to the following pages:
 
-[options="autowidth"]
-|===
-| Menu Item              | Description
-
-| Info...
-| Display the Node Details dialog
-
-| Events
-| Navigate to the Events page
-
-| Alarms
-| Navigate to the Alarms page
-
-| Outages
-| Navigate to the Outages page
-
-| Assets
-| Navigate to the Assets page
-
-| Metadata
-| Navigate to the Metadata page
-
-| Hardware Info
-| Navigate to the Hardware Inventory page
-
-| Availability
-| Navigate to the Availability page
-
-| Resource Graphs
-| Navigate to the Resource Graphs page
-
-| Rescan
-| Navigate to the Node Rescan page
-
-| Admin
-| Navigate to the Admin / Node Management page
-
-| Update SNMP
-| Navigate to the Update SNMP Information page
-
-| Schedule an Outage
-| Navigate to the Scheduled Outage page
-
-| View Topology
-| Navigate to the Topology Map page
-|===
+* Events
+* Alarms
+* Outages
+* Assets
+* Metadata
+* Hardware Inventory
+* Availability
+* Resource Graphs
+* Node Rescan
+* Admin / Node Management
+* Update SNMP Information
+* Schedule an Outage
+* View Topology Map
 
 .Node Action Menu
-image::structured-node-list/node-action-menu.png["{page-component-title} the node Action menu" width=400]
+image::structured-node-list/node-action-menu.png["{page-component-title} node Action menu." width=300]
 
-== Node Details
+== Node details
 
-Clicking on the "Info..." item in the Action Menu displays the Node Details dialog which provides additional information about the node.
+Click **Info...** in the Action Menu to view additional information about the node including its ID, IP address, location, latitude/longitude, and so on.
 
 .Node Details
-image::structured-node-list/node-details.png["{page-component-title} the Node Details dialog" width=400]
+image::structured-node-list/node-details.png["{page-component-title} Node Details dialog." width=400]
 
-== Download / Export
+== Download current node data
 
-Clicking the Download button allows you to export the current data (depending on search and filter configuration) in either CSV or JSON format.
+Click the Download symbol to export the current node data (depending on search and filter configuration) in either CSV or JSON format.
 
-.Download / Export
-image::structured-node-list/node-download-menu.png["{page-component-title} the Node download / export menu"]
+.Download/Export
+image::structured-node-list/node-download-menu.png["{page-component-title} Node download/export menu."]
 
-== Node Preferences
+== Node preferences
 
-Clicking the gear icon opens up the Node Preferences dialog.
+Node preferences let you specify the order in which the columns of data appear in the UI.
+These preferences are stored in your browser's local storage, and so apply to anyone using the machine on which that browser runs, which may not be the OpenNMS user you are logged in as.
+The preferences will be retained unless cleared by your browser's policy.
+Your preferences are not available on different machines or the same machine using a different web browser.
+
+Click the **gear** symbol to open the Node Preferences dialog.
 
 .Node Preferences
-image::structured-node-list/node-preferences.png["{page-component-title} the Node Preferences dialog" width=400]
+image::structured-node-list/node-preferences.png["{page-component-title} Node Preferences dialog." width=400]
 
-Click "Default" to reset all displayed columns to the default list visibility and order.
+Click **Default** to reset all displayed columns to the default list visibility and order.
 
-Click the checkbox next to each column to display or hide that column. Note that changes take effect immediately.
+Click the checkbox next to each column name to display or hide that column.
+Note that changes take effect immediately.
 
 Click the up and down arrows to reorder the columns.
 
-Click "Save and Close" to save your settings.
-This will also save your current search and filtering configuration.
+Click **Save and Close** to save your settings and your current search and filtering configuration.
 
-Click the "X" to close without making changes.
+Click the "X" to close without saving to local storage.
 
-NOTE: Node Preferences are stored in your browser's `Local Storage`.
-This will retain the information in that browser for that machine's current user, which may or may not be the OpenNMS user you are logged in as.
-The preferences will be retained unless cleared by your browser's policy.
-Note that currently your preferences won't be available on different machines or the same machine using a different web browser.
+== Filter and Search
 
-== Filtering and Searching
+You can filter and search via the Filtering and Extended Search sections in the left panel, and by the **Search node label** search box above the node table.
+Note that searches combine the results of all configured filters and search parameters.
+For example, you can search by `Category + Location + Extended Search Term + Node Label search term` in any combination.
 
-Filtering and searching can be done via the Filtering and Extended Search sections in the left panel, and by the "Search node label" search box above the node table.
-Note that searches will combine the results of *all* configured filters and search parameters.
-For example you can search by `Category + Location + Extended Search Term + Node Label search term` in any combination.
+=== Node label search
 
-=== Node Label Search
-
-The input box above the Node Table allows you to search by node label.
-Note, this is a case-sensitive wildcard search.
-Entering `cal` will match nodes have the label `localhost` as well as `california` but not `California`.
+The input box above the Node Table lets you search by node label.
+This is a case-sensitive wildcard search.
+Entering `cal` will match nodes have the label `localhost` as well as `california`, but not `California`.
 
 === Filtering
 
-Filtering allows you to filter by Category (i.e. Surveillance Category), Flows and Monitoring Locations.
+You can filter by Category (for example, Surveillance Category), flows, and monitoring locations.
 
 Click on an item to filter by that item.
-More than one item per section can be selected.
-As items are selected, the number of items selected will display; a check icon will display to clear that section's selections.
+You can select more than one item per section.
 
-Use "Clear All" to clear all filters and search parameters.
+As items are selected, the number of items selected for that section will display.
+A check symbol lets you clear the selected items for that section.
 
-The Categories section allows you to enable "Match All", in which case only nodes corresponding to *all* the selected categories (i.e. the "intersection") will be displayed.
+Use **Clear All** to clear all filters and search parameters.
+
+Use **Match All** in the Categories section to display only nodes corresponding to *all* the selected categories.
+
 For example, you could filter on nodes that are in both the *Routers* and *Production* categories.
 
 .Category Filter
-image::structured-node-list/category-filter-match-all.png["{page-component-title} the Node Category Filter" width=400]
+image::structured-node-list/category-filter-match-all.png["{page-component-title} Node Category Filter." width=400]
 
-=== Extended Search
+=== Extended search
 
 This allows you to search by various additional fields.
 Note that some fields perform wildcard searches and some are exact searches.
@@ -172,46 +140,48 @@ Also note that some fields, for example SNMP fields, are not displayed in the ta
 | Item                   | Description
 
 | Foreign Source
-| Search by Foreign Source only
+| Search by Foreign Source only.
 
 | Foreign ID
-| Search by Foreign ID only
+| Search by Foreign ID only.
 
 | Foreign Source:Foreign ID
-| Search by Foreign Source and Foreign ID in `fs:fid` format
+| Search by Foreign Source and Foreign ID in `fs:fid` format.
 
 | IP Address
-| Search by IP address. Will only search on valid IPv4 and IPv6 addresses, will not search on wildcard or partial addresses
+| Search by IP address.
+Will search only on valid IPv4 and IPv6 addresses.
+It will not search on wildcard or partial addresses.
 
 | Sys Contact
-| Search by System Contact. Performs a case-sensitive wildcard search.
+| Performs a case-sensitive wildcard search by system contact.
 
 | Sys Description
-| Search by System Description. Performs a case-sensitive wildcard search.
+| Performs a case-sensitive wildcard search by system description.
 
 | Sys Location
-| Search by System Location. Performs a case-sensitive wildcard search.
+| Performs a case-sensitive wildcard search by system location.
 
 | Sys Name
-| Search by System Name. Performs a case-sensitive wildcard search.
+| Performs a case-sensitive wildcard search by system name.
 
-| Sys Object Id
-| Search by System Object ID. Performs a case-sensitive wildcard search.
+| Sys Object ID
+| Performs a case-sensitive wildcard search by system object ID.
 
 | SNMP Alias
-| Search by SNMP Alias. Performs an exact search.
+| Performs an exact search by SNMP alias.
 
 | SNMP Description
-| Search by SNMP Description. Performs an exact search.
+| Performs an exact search by SNMP description.
 
 | SNMP Index
-| Search by SNMP Index. Performs an exact search.
+| Performs an exact search by SNMP index.
 
 | SNMP Name
-| Search by SNMP Name. Performs an exact search.
+| Performs an exact search by SNMP name.
 
 | SNMP Type
-| Search by SNMP Type. Performs an exact search.
+| Performs an exact search by SNMP type.
 |===
 
 .Extended Search
