--- a/docs/modules/operation/pages/deep-dive/geographical-map/introduction.adoc
+++ b/docs/modules/operation/pages/deep-dive/geographical-map/introduction.adoc
@@ -44,25 +44,32 @@ A cluster's marker displays as the color of the highest severity of the nodes th
 
 == Tile providers
 
-Tile providers are servers that serve up geographical map tiles which are used by the geographical map.
-By default, OpenNMS will use the publicly-available *OpenStreetMap* and *OpenTopoMap*.
+Tile providers are services that provide the image data (in the form of map tiles) for the geographical map.
+By default, OpenNMS uses the publicly available https://www.openstreetmap.org[OpenStreetMap] and https://opentopomap.org[OpenTopoMap].
 
-However, in cases where you wish to use your own map server, for example a local server inside a firewall, you can specify a user-defined tile provider.
+However, if you need to use your own map server, for example on a local server inside a firewall, you can specify a user-defined tile provider.
 
-To select between tile providers, click this icon image:geographical-map/tile-provider-selector.png[width=64] on the geographical map.
+To select among tile providers, follow these steps:
 
-Then select a provider from the list:
+. Click the *tile* symbol image:geographical-map/tile-provider-selector.png[width=64] on the geographical map.
 
-image:geographical-map/tile-provider-list.png[]
+. Select a provider from the list:
 
-In `etc/opennms.properties`, use the following configuration. In this case the local tile provider is found at `192.168.0.99`.
+image:geographical-map/tile-provider-list.png[Radio button menu with three map options.]
 
-Set `gwt.openlayers.name` to provide a display name, and specify `gwt.openlayers.userDefinedAsDefault=true` if you want this tile provider to be the default (displays as the first one, and loads by default instead of the built-in providers).
+=== Tile provider configuration
+
+To configure a a user-defined tile provider, follow these steps:
+
+. In `etc/opennms.properties`, use the configuration below.
+In this case the local tile provider is found at `192.168.0.99`.
+
+. Set `gwt.openlayers.name` to provide a display name, and specify `gwt.openlayers.userDefinedAsDefault=true` if you want this tile provider to be the default (displays as the first one, and loads by default instead of the built-in providers).
 
 ```
 ###### MAPPING AND GEOCODING ######
 
-# The tile server URL to use for OpenLayers.  This can be any mapnik-style tile server URL.
+# The tile server URL to use for OpenLayers. This can be any mapnik-style tile server URL.
 # (Sorry, no support for multiple URLs yet.)
 # If 'gwt.openlayers.userDefinedAsDefault' is true, use this tile server as the default one on the Geographical Map page
 # OpenNMS default tile server
@@ -73,10 +80,12 @@ gwt.openlayers.options.attribution=Map data &copy; <a tabindex="-1" target="_bla
 gwt.openlayers.userDefinedAsDefault=true
 ```
 
-In addition, if you supply a user-defined tile provider, you need to update the `'Content-Security-Policy'` of your OpenNMS instance to ensure it is not blocked by the browser.
+[start=3]
+. In addition, if you supply a user-defined tile provider, you need to update the `'Content-Security-Policy'` of your OpenNMS instance to ensure the browser does not block the tile provider.
 
-In `jetty-webapps/opennms/WEB-INF/web.xml`, search for this section.
-Update the `param-value` under *Sets the header value* to include your tile provider's URL in the `img-src` section. In the example below, the URL `http://192.168.0.99` has been added.
+.. In `jetty-webapps/opennms/WEB-INF/web.xml`, search for the section shown below.
+.. Update the `param-value` under *Sets the header value* to include your tile provider's URL in the `img-src` section.
+ The example below adds the URL `http://192.168.0.99`.
 
 ```xml
   <filter>
