--- a/docs/modules/deployment/pages/core/containers.adoc
+++ b/docs/modules/deployment/pages/core/containers.adoc
@@ -65,7 +65,7 @@ Make sure to remove `CAP_NET_RAW` from `allowedCapabilities` when you set `allow
 
 * By default, OpenNMS will create a ClusterRole, ClusterRoleBinding, Route, SecurityContextConstraints, and ServiceAccount.
 The user who installs OpenNMS must have the required permissions to make these modifications to the OpenShift cluster, including admin access.
-Disabling ClusterRole, ClusterRoleBinding, Route, SecurityContextConstraints, and ServiceAccount along with setting allowPrivilegeEscalation to false will run the {page-component-title} core in unprivileged mode.
+Disabling ClusterRole, ClusterRoleBinding, Route, SecurityContextConstraints, and ServiceAccount along with setting `allowPrivilegeEscalation` to false will run the {page-component-title} core in unprivileged mode.
 
 To install {page-component-title} on OpenShift, follow these steps:
 
