--- a/docs/modules/deployment/pages/time-series-storage/timeseries/time-series-storage.adoc
+++ b/docs/modules/deployment/pages/time-series-storage/timeseries/time-series-storage.adoc
@@ -1,7 +1,7 @@
 
 [[time-series-storage]]
 = Time Series Database
-:description: Overview of OpenNMS time series database options: JRobin, RRDtool, Newts, ONMS Time Series DB (Meridian only). Plugins and parallel series writes.
+:description: Overview of OpenNMS time series database options: JRobin, RRDtool, and Newts. Plugins and parallel series writes.
 
 {page-component-title} stores performance data in a time series database (JRobin by default).
 For different scenarios you may want to use a different time series database.
