--- a/docs/modules/reference/pages/provisioning/adapters/rdns.adoc
+++ b/docs/modules/reference/pages/provisioning/adapters/rdns.adoc
@@ -11,9 +11,9 @@ For every IP address found, a corresponding reverse DNS zone must exist on your 
 To use this feature you have to install the reverse DNS provisioning plugin from the repository.
 
 * For RPM-based distributions:
-** `yum install opennms-plugin-provisioning-reverse-dns`
+** `yum install {package-prefix}-plugin-provisioning-reverse-dns`
 * For Debian-based distributions:
-** `apt-get install opennms-plugin-provisioning-reverse-dns`
+** `apt-get install {package-prefix}-plugin-provisioning-reverse-dns`
 
 == Configuration
 
