--- a/docs/modules/deployment/pages/core/centos-rhel9/install-core.adoc
+++ b/docs/modules/deployment/pages/core/centos-rhel9/install-core.adoc
@@ -9,12 +9,7 @@ endif::[]
 .Install {page-component-title} with all built-in dependencies
 [source, console]
 ----
-ifeval::["{page-component-title}" == "Horizon"]
-sudo dnf -y install opennms
-endif::[]
-ifeval::["{page-component-title}" == "Meridian"]
-sudo dnf -y install meridian
-endif::[]
+sudo dnf -y install {package-prefix}
 ----
 
 If you want time series trending and forecast functions, you must install the https://www.r-project.org/[R project] packages.
