--- a/docs/modules/reference/pages/provisioning/adapters/snmp-asset.adoc
+++ b/docs/modules/reference/pages/provisioning/adapters/snmp-asset.adoc
@@ -23,9 +23,9 @@ NOTE: By default, this adapter runs 5 minutes after a provisiond `nodeScanComple
 To use this feature you have to install the SNMP asset provisioning plugin from the repository.
 
 * For RPM-based distributions:
-** `yum install opennms-plugin-provisioning-snmp-asset`
+** `yum install {package-prefix}-plugin-provisioning-snmp-asset`
 * For Debian-based distributions:
-** `apt-get install opennms-plugin-provisioning-snmp-asset`
+** `apt-get install {package-prefix}-plugin-provisioning-snmp-asset`
 
 == Configuration
 
