--- a/docs/modules/reference/pages/ticketing/ticketer/jira.adoc
+++ b/docs/modules/reference/pages/ticketing/ticketer/jira.adoc
@@ -8,15 +8,15 @@ The Jira ticketing plugin creates Jira issues in response to {page-component-tit
 [[ref-ticketing-jira-setup]]
 == Setup
 
-IMPORTANT: The Jira ticketer requires the `opennms-plugin-ticketer-jira` package to be installed before use.
+IMPORTANT: The Jira ticketer requires the `{package-prefix}-plugin-ticketer-jira` package to be installed before use.
 
 ****
-To install the `opennms-plugin-ticketer-jira` package, use one of the following commands:
+To install the `{package-prefix}-plugin-ticketer-jira` package, use one of the following commands:
 
 * For RPM-based distributions:
-** `yum install opennms-plugin-ticketer-jira`
+** `yum install {package-prefix}-plugin-ticketer-jira`
 * For Debian-based distributions:
-** `apt-get install opennms-plugin-ticketer-jira`
+** `apt-get install {package-prefix}-plugin-ticketer-jira`
 ****
 
 . Once the package has been installed, set the ticketer plugin property in `$\{OPENNMS_HOME}/etc/opennms.properties.d/ticketer.properties` to enable the plugin:
