--- a/docs/modules/deployment/pages/core/centos-rhel9/install-core.adoc
+++ b/docs/modules/deployment/pages/core/centos-rhel9/install-core.adoc
@@ -20,9 +20,12 @@ endif::[]
 If you want time series trending and forecast functions, you must install the https://www.r-project.org/[R project] packages.
 The additional download size for packages is ~390MB.
 
+Note that R-core packages require that you have a PowerTools repository enabled.
+
 .(Optional) Install R-core packages for time series trending and forecasting
 [source, console]
 ----
+sudo dnf config-manager --set-enabled powertools
 sudo dnf -y install epel-release
 sudo dnf -y install R-core
 ----
