--- a/docs/modules/deployment/pages/core/centos-rhel7/install-core.adoc
+++ b/docs/modules/deployment/pages/core/centos-rhel7/install-core.adoc
@@ -15,9 +15,12 @@ sudo yum -y install {package-prefix}
 If you want time series trending and forecast functions you must install the link:https://www.r-project.org/[R project] packages.
 The additional download size for packages is ~390 MB.
 
+Note that R-core packages require that you have a PowerTools repository enabled.
+
 .Install R-core packages for time series trending and forecasting (optional)
 [source, console]
 ----
+sudo dnf config-manager --set-enabled powertools
 sudo yum -y install epel-release
 sudo yum -y install R-core
 ----
