--- a/docs/modules/reference/pages/daemons/daemon-config-files/provisiond.adoc
+++ b/docs/modules/reference/pages/daemons/daemon-config-files/provisiond.adoc
@@ -75,7 +75,7 @@ NOTE: Any changes to the thread pools require a restart of the {page-component-t
 This pool determines the number of requisitions that can be imported at one time.
 Increase this number if you have a large number of requisitions.
 
-Import threads will check the requisition against the database to determine what add/change/delete operations are necessary.
+Import threads will check the requisition against the database to determine what add, change, or delete operations are necessary.
 They will also attempt to pull SNMP system information from the node into the database.
 Once this inventory update is complete, the import thread will schedule a node scan as necessary.
 
