--- a/docs/modules/operation/nav.adoc
+++ b/docs/modules/operation/nav.adoc
@@ -69,6 +69,7 @@
 *** xref:deep-dive/performance-data-collection/resource-types.adoc[]
 **** xref:deep-dive/performance-data-collection/snmp-index.adoc[]
 *** xref:deep-dive/performance-data-collection/collectors.adoc[]
+*** xref:deep-dive/performance-data-collection/graphs.adoc[]
 *** xref:deep-dive/performance-data-collection/snmp-property-extenders/property-extenders.adoc[]
 **** xref:deep-dive/performance-data-collection/snmp-property-extenders/cisco-cbqos.adoc[]
 **** xref:deep-dive/performance-data-collection/snmp-property-extenders/enum-lookup.adoc[]
