--- a/docs/modules/deployment/pages/core/getting-started.adoc
+++ b/docs/modules/deployment/pages/core/getting-started.adoc
@@ -1,7 +1,7 @@
 
 [[getting-started-core]]
 = Installation and Configuration
-:description: Install and configure OpenNMS instance including PostgreSQL set up on CentOS/RHEL 7-9, Debian/Ubuntu, and Docker.
+:description: Install and configure OpenNMS instance including PostgreSQL set up on CentOS/RHEL 7-9 and Debian/Ubuntu.
 
 This section explains how to install and configure a new {page-component-title} instance, including the following tasks:
 
@@ -50,12 +50,6 @@ endif::[]
 +
 NOTE: If you do not include the appropriate SELinux policy, {page-component-title} may generate an ICMP permissions error when starting up (see xref:reference:configuration/selinux.adoc[]).
 
-ifeval::["{page-component-title}" == "Horizon"]
-* To run services in https://docs.docker.com/[Docker], you need https://docs.docker.com/compose/install[Docker Compose] for the service stacks from our examples.
-On Debian, you must install and configure `sudo` yourself.
-See the https://wiki.debian.org/sudo/[Debian Wiki] for more information.
-endif::[]
-
 include::../time-sync.adoc[]
 
 [[setup-postgresql]]
@@ -89,12 +83,6 @@ Debian/Ubuntu::
 +
 --
 include::debian-ubuntu/postgresql.adoc[]
---
-
-Docker::
-+
---
-include::docker/postgresql.adoc[]
 --
 endif::[]
 ====
@@ -137,12 +125,6 @@ Debian::
 --
 include::debian/install-core.adoc[]
 --
-
-Docker::
-+
---
-include::docker/core.adoc[]
---
 endif::[]
 ====
 
@@ -162,12 +144,6 @@ Debian/Ubuntu::
 +
 --
 include::debian-ubuntu/initialize-core.adoc[]
---
-
-Docker::
-+
---
-include::docker/initialize.adoc[]
 --
 endif::[]
 ====
